--- a/index.html
+++ b/index.html
@@ -36,4 +36,4 @@
 
 
 
-</body></html>
+</body></html>youtube.com/redirect?event=comments&redir_token=QUFFLUhqbnhnVjNvZklBYmdUbS1kMzQ3djhYTjh0TTZPd3xBQ3Jtc0trLU9pUC1WQmppQlRBV2pPMENZQjB4QlRYVXgtMTlkWlJKNGQtREk4SkRlWkpBYW9tVGdSU3kySFhQY3VGOVVmUTFNYUlGbjBQZWlxNHFnN1lSakVyWGhmeDhOMWVoX1BPeHdyZjJ4UXdLSUlUbWJJNA&q=https%3A%2F%2Fv.ht%2FAu8ta&html_redirect=1
